# app/Http/Controllers/Api/Dashboard/EventController.php
@@ -30,7 +30,7 @@ class EventController extends Controller
     public function index()
     {
         $this->authorize('viewAny', Event::class);
-        return $this->eventRepository->all();
+        return $this->eventRepository->index();
     }
 
     /**
@@ -102,5 +102,32 @@ class EventController extends Controller
         $event = Event::findOrFail($request->event_id);
         $this->authorize('update', $event);
         return $this->eventRepository->toggleStatus($request->event_id);
+    }
+
+    /**
+     * @OA\Post(
+     *     path="/api/dashboard/events/{event_id}/registrations/{registration_id}/upgrade",
+     *     summary="Upgrade waitlisted user forcibly",
+     *     @OA\Response(response=200, description="Event status toggled successfully")
+     * )
+     */
+    public function upgradeFromWaitlist(Request $request)
+    {
+        $event = Event::findOrFail($request->event_id);
+        $this->authorize('update', $event);
+        return $this->eventRepository->upgradeFromWaitlist($request->event_id, $request->registration_id);
+    }
+    /**
+     * @OA\Post(
+     *     path="/api/dashboard/{event_id}/auto-upgrade",
+     *     summary="Upgarede most recent waitlisted user if possible",
+     *     @OA\Response(response=200, description="Event status toggled successfully")
+     * )
+     */
+    public function autoUpgradeFromWaitlist(Request $request)
+    {
+        $event = Event::findOrFail($request->event_id);
+        $this->authorize('update', $event);
+        return $this->eventRepository->autoUpgradeFromWaitlist($request->event_id);
     }
 }
